--- a/assets/sass/components/_sobre-mi.scss
+++ b/assets/sass/components/_sobre-mi.scss
@@ -23,7 +23,7 @@
   }
 
   p {
-    margin: 0 auto;
+    width: 80%;
     font-size: 1.25rem;
     line-height: 1.8;
     color: $light-muted;
